--- a/hactor/package.json
+++ b/hactor/package.json
@@ -19,7 +19,8 @@
       "underscore": ">=1.3.3",
       "zmq": ">=2.1.0",
       "winston" : ">=0.6.2",
-      "socket.io" : "=0.9.10"
+      "socket.io" : "=0.9.10",
+      "mongodb" : "=1.1.4"
   },
   "devDependencies": {
       "should" : "=1.1.0",
